<resources>
    <string name="app_name">Notemon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="shared_notes">Shared Notes</string>
    <string name="title_activity_basic_note">Note</string>

    <string name="short_text">Hello from the other side!</string>
    <string name="edit">Edit</string>
    <string name="add_task">Add Task</string>
    <string name="speech_prompt"><![CDATA[Say something&#8230;]]></string>
    <string name="speech_not_supported">Sorry! Your device doesn\\\'t support speech input</string>
    <string name="enter_title">Enter title:</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_collaborator">Add collaborator</string>
    <string name="add_to_project">Add to project</string>
    <string name="delete">Delete</string>
    <string name="long_text">Ecstatic advanced and procured civility not absolute put continue. Overcame breeding or my concerns removing desirous so absolute. My melancholy unpleasing imprudence considered in advantages so impression. Almost unable put piqued talked likely houses her met. Met any nor may through resolve entered. An mr cause tried oh do shade happy. Picture removal detract earnest is by. Esteems met joy attempt way clothes yet demesne tedious. Replying an marianne do it an entrance advanced. Two dare say play when hold. Required bringing me material stanhill jointure is as he. Mutual indeed yet her living result matter him bed whence. Wrong do point avoid by fruit learn or in death. So passage however besides invited comfort elderly be me. Walls began of child civil am heard hoped my. Satisfied pretended mr on do determine by. Old post took and ask seen fact rich. Man entrance settling believed eat joy. Money as drift begin on to. Comparison up insipidity especially discovered me of decisively in surrounded. Points six way enough she its father. Folly sex downs tears ham green forty. There worse by an of miles civil. Manner before lively wholly am mr indeed expect. Among every merry his yet has her. You mistress get dashwood children off. Met whose marry under the merit. In it do continual consulted no listening. Devonshire sir sex motionless travelling six themselves. So colonel as greatly shewing herself observe ashamed. Demands minutes regular ye to detract is. By spite about do of do allow blush. Additions in conveying or collected objection in. Suffer few desire wonder her object hardly nearer. Abroad no chatty others my silent an. Fat way appear denote who wholly narrow gay settle. Companions fat add insensible everything and friendship conviction themselves. Theirs months ten had add narrow own. Full he none no side. Uncommonly surrounded considered for him are its. It we is read good soon. My to considered delightful invitation announcing of no decisively boisterous. Did add dashwoods deficient man concluded additions resources. Or landlord packages overcame distance smallest in recurred. Wrong maids or be asked no on enjoy. Household few sometimes out attending described. Lain just fact four of am meet high. Certainty listening no no behaviour existence assurance situation is. Because add why not esteems amiable him. Interested the unaffected mrs law friendship add principles. Indeed on people do merits to. Court heard which up above hoped grave do. Answer living law things either sir bed length. Looked before we an on merely. These no death he at share alone. Yet outward the him compass hearted are tedious. Inhabit hearing perhaps on ye do no. It maids decay as there he. Smallest on suitable disposed do although blessing he juvenile in. Society or if excited forbade. Here name off yet she long sold easy whom. Differed oh cheerful procured pleasure securing suitable in. Hold rich on an he oh fine. Chapter ability shyness article welcome be do on service. Oh acceptance apartments up sympathize astonished delightful. Waiting him new lasting towards. Continuing melancholy especially so to. Me unpleasing impossible in attachment announcing so astonished. What ask leaf may nor upon door. Tended remain my do stairs. Oh smiling amiable am so visited cordial in offices hearted. Put all speaking her delicate recurred possible. Set indulgence inquietude discretion insensible bed why announcing. Middleton fat two satisfied additions. So continued he or commanded household smallness delivered. Door poor on do walk in half. Roof his head the what.</string>
    <string name="projects">Projects</string>
    <string name="add_project">Add Project</string>
    <string name="notemon_title">Notemon</string>
    <string name="delete_note">Delete note</string>
    <string name="prompt_for_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login">Notemon | Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration">Notemon | Registration</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="reminders">Reminders</string>
    <string name="not_a_member_sign_up">Not a member? Sign up!</string>
    <string name="title_login">Login</string>
    <string name="content_login">Logging in ...</string>
    <string name="content_reg">Registration in progress ...</string>
    <string name="title_reg">Registration</string>
    <string name="task_name">Task name</string>
    <string name="add_next_task">Add next task</string>
    <string name="finish">Finish</string>
    <string name="notemon">Notemon</string>
</resources>
