<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_reminder"
        android:orderInCategory="100"
        android:title="@string/add_reminder"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_to_project"
        android:orderInCategory="100"
        android:title="@string/add_to_project"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share_to_user"
        android:orderInCategory="100"
        android:title="@string/add_collaborator"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never"/>
</menu>