<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/navSharedNotes"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/shared_notes"/>
        <item
            android:id="@+id/navReminders"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/reminders"/>
    </group>


    <item android:title="Utils">
        <menu>
            <item
                android:id="@+id/navProfile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="Profile"/>
            <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="Settings"/>
        </menu>
    </item>


    <!--<item android:title="Projects">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/navProject"-->
                <!--android:icon="@drawable/ic_play_arrow_black_24dp"-->
                <!--android:title="Project Home"/>-->
            <!--<item-->
                <!--android:id="@+id/navProject2"-->
                <!--android:icon="@drawable/ic_play_arrow_black_24dp"-->
                <!--android:title="School"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
